# api/Routes/progress_route.js
@@ -3,6 +3,6 @@ const routes = express.Router()
 const ProgressController = require("../Controller/progress_controller")
 
 routes.get("/user/:progressId",ProgressController.GetUserProgress)
-routes.get("/latest/:userId",ProgressController.GetLatestProgress)
+routes.get("/latest/:progressId",ProgressController.GetLatestProgress)
 
 module.exports = routes;
