# api/Routes/schedule_routes.js
@@ -3,7 +3,8 @@ const routes = express.Router()
 const scheduleController = require("../Controller/schedule_controlller")
 const AuthMiddleware = require("../middleware/auth_middleware")
 
-routes.post("/schedule",AuthMiddleware.validateToken,AuthMiddleware.authorized("Admin"),scheduleController.CreateSchedule)
+//Done
+routes.post("/create",AuthMiddleware.validateToken,AuthMiddleware.authorized("Admin"),scheduleController.CreateSchedule)
 routes.put("/update/:scheduleId",AuthMiddleware.validateToken,AuthMiddleware.authorized("Admin"),scheduleController.UpdateSchedule)
 routes.delete("/delete/:scheduleId",AuthMiddleware.validateToken,AuthMiddleware.authorized("Admin"),scheduleController.DeleteSchedule)
 
